fix vertical stretch of chapter thumb images in safari

--- a/user/themes/longread/scss/hover-effects.scss
+++ b/user/themes/longread/scss/hover-effects.scss
@@ -13,7 +13,6 @@ $dark-red: #C70000;
 .hover-grid figure img {
   position: relative;
   display: block;
-  min-height: 100%;
   max-width: 100%;
   opacity: 0.8;
 }
